# src/Controller/CategoryController.php
@@ -8,6 +8,7 @@ use OpenApi\Attributes As OA;
 use App\Repository\CategoryRepository;
 use Doctrine\ORM\EntityManagerInterface;
 use Nelmio\ApiDocBundle\Annotation\Model;
+use Nelmio\ApiDocBundle\Annotation\Security;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
@@ -17,15 +18,25 @@ use Symfony\Component\Validator\Validator\ValidatorInterface;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 
 #[IsGranted('ROLE_USER')]
+#[OA\Tag(name: "Category")]
+#[Security(name: 'Bearer')]
 class CategoryController extends AbstractController
 {
     /**
      * Return all categories
      */
     #[OA\Response(
-        response: 200,
-        description: 'show all categories',
-        content: new Model(type: Category::class, groups: ['category:read'])
+        response: Response::HTTP_OK,
+        description: 'Return a array of category',
+        content: new OA\JsonContent(
+            type: 'array',
+            items: new OA\Items(new Model(type: Category::class, groups: ['category:read']))
+        )
+    )]
+    #[OA\Response(
+        response:
+            Response::HTTP_UNAUTHORIZED,
+            ref: '#/components/responses/UnauthorizedError'
     )]
     #[Route('/api/category', name: 'api_show_category', methods:['GET'])]
     public function index(CategoryRepository $categoryRepository): Response
@@ -34,16 +45,33 @@ class CategoryController extends AbstractController
     }
 
     /**
-     * Return one categories
+     * Return one category
      */
     #[OA\Response(
-        response: 200,
-        description: 'show one category',
+        response: Response::HTTP_OK,
+        description: 'return one category',
         content: new Model(type: Category::class, groups: ['category:read'])
     )]
+    #[OA\Response(
+        response:
+            Response::HTTP_NOT_FOUND,
+            ref: '#/components/responses/NotFoundError',
+    )]
+    #[OA\Response(
+        response:
+            Response::HTTP_UNAUTHORIZED,
+            ref: '#/components/responses/UnauthorizedError'
+    )]
     #[Route('/api/category/{id}', name: 'api_show_one_category', methods:['GET'])]
-    public function showOne(Category $category): Response
-    {
+    public function showOne(CategoryRepository $categoryRepository, Int $id): Response
+    {   
+        $category = $categoryRepository->find($id);
+        if(!$category){
+            return $this->json([
+                "status" => Response::HTTP_NOT_FOUND,
+                "message" => "Category not found"
+            ]);
+        }
         return $this->json($category, Response::HTTP_OK,[], ['groups'=>'category:read']);
     }
     
@@ -51,7 +79,7 @@ class CategoryController extends AbstractController
      * Create a new category
      */
     #[OA\RequestBody(
-        description:'Create a category',
+        description:'Create a new category',
         required: true,
         content: new Model(type: Category::class, groups: ['category:create'])
     )]
@@ -61,15 +89,14 @@ class CategoryController extends AbstractController
         content: new Model(type: Category::class, groups : ['category:read'])
     )]
     #[OA\Response(
-        response : Response::HTTP_BAD_REQUEST,
-        description : 'Invalide Request',
-        content: new OA\JsonContent(
-            type: 'object',
-            properties: [
-                new OA\Property(property: 'status', type:'integer'),
-                new OA\Property(property: 'message', type:'string')
-            ]
-        )
+        response:
+            Response::HTTP_BAD_REQUEST,
+            ref: '#/components/responses/BadRequestError'
+    )]
+    #[OA\Response(
+        response:
+            Response::HTTP_UNAUTHORIZED,
+            ref: '#/components/responses/UnauthorizedError'
     )]
     #[Route('/api/category', name: 'api_create_category', methods:['POST'])]
     public function create(Request $request, SerializerInterface $serializer, EntityManagerInterface $manager, ValidatorInterface $validator)
@@ -96,34 +123,46 @@ class CategoryController extends AbstractController
     }
 
     /**
-     * Update a new category
+     * Update a category
      */
     #[OA\RequestBody(
-        description:'Create a category',
+        description:'Update a category',
         required: true,
         content: new Model(type: Category::class, groups: ['category:create'])
     )]
     #[OA\Response(
-        response : Response::HTTP_ACCEPTED,
+        response : Response::HTTP_OK,
         description : 'Successful operation',
         content: new Model(type: Category::class, groups: ['category:read'])
     )]
     #[OA\Response(
-        response : Response::HTTP_BAD_REQUEST,
-        description : 'Invalide Request',
-        content: new OA\JsonContent(
-            type: 'object',
-            properties: [
-                new OA\Property(property: 'status', type:'integer'),
-                new OA\Property(property: 'message', type:'string')
-            ]
-        )
+        response:
+            Response::HTTP_BAD_REQUEST,
+            ref: '#/components/responses/BadRequestError'
+    )]
+    #[OA\Response(
+        response:
+            Response::HTTP_NOT_FOUND,
+            ref: '#/components/responses/NotFoundError',
+    )]
+    #[OA\Response(
+        response:
+            Response::HTTP_UNAUTHORIZED,
+            ref: '#/components/responses/UnauthorizedError'
     )]
     #[Route('/api/category/{id}', name: 'api_update_category', methods: ['PUT'])]
     public function update(EntityManagerInterface $manager, Request $request, CategoryRepository $categoryRepository, int $id, SerializerInterface $serialiser, ValidatorInterface $validator)
     {
         try {
             $categoryUpdate = $categoryRepository->find($id);
+
+            if(!$categoryUpdate){
+                return $this->json([
+                    "status" => Response::HTTP_NOT_FOUND,
+                    "message" => "Category not found"
+                ]);
+            }
+
             $newCategory = $serialiser->deserialize($request->getContent(), Category::class, 'json');
 
             $errors = $validator->validate($newCategory);
