# src/Controller/UserController.php
@@ -4,9 +4,10 @@ namespace App\Controller;
 
 use Exception;
 use App\Entity\User;
+use OpenApi\Attributes As OA;
 use App\Repository\UserRepository;
-use Doctrine\ORM\EntityManager;
 use Doctrine\ORM\EntityManagerInterface;
+use Nelmio\ApiDocBundle\Annotation\Security;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
@@ -15,22 +16,87 @@ use Symfony\Component\Security\Http\Attribute\IsGranted;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\PasswordHasher\Hasher\UserPasswordHasherInterface;
 
-
 #[IsGranted('ROLE_ADMIN')]
+#[OA\Tag(name: "User")]
+#[Security(name: 'Bearer')]
 class UserController extends AbstractController
-{
+{   
+
+    /**
+     * Return all user
+     */
+    #[OA\Response(
+        response: Response::HTTP_OK,
+        description: 'Return an array of user',
+        content: new OA\JsonContent(
+            type: 'array',
+            items: new OA\Items(ref: '#/components/schemas/UserRead')
+        )
+    )]
+    #[OA\Response(
+        response : 
+            Response::HTTP_UNAUTHORIZED,
+            ref:'#/components/responses/UnauthorizedError',
+    )]
     #[Route('/api/user', name:'api_show_user', methods:['GET'])]
     public function show(UserRepository $userRepository):Response
     {
         return $this->json($userRepository->findAll(), Response::HTTP_OK, [], ['groups'=>'user:read']);
     }
 
+    /**
+     * Return one user
+     */
+    #[OA\Response(
+        response: Response::HTTP_OK,
+        description: 'Return all user',
+        content: new OA\JsonContent(
+            ref: '#/components/schemas/UserRead'
+        )
+    )]
+    #[OA\Response(
+        response : 
+            Response::HTTP_NOT_FOUND,
+            ref:'#/components/responses/NotFoundError',
+    )]
+    #[OA\Response(
+        response : 
+            Response::HTTP_UNAUTHORIZED,
+            ref:'#/components/responses/UnauthorizedError',
+    )]
     #[Route('/api/user/{id}', name:'api_show_one_user', methods:['GET'])]
-    public function showOne(User $user):Response
+    public function showOne(UserRepository $userRepository, Int $id):Response
     {
+        $user = $userRepository->find($id);
+        if(!$user){
+            return $this->json([
+                'status' => Response::HTTP_NOT_FOUND,
+                'message' => 'User not found'
+            ]);
+        }
         return $this->json($user, Response::HTTP_OK, [], ['groups'=>'user:read']);
     }
 
+    /**
+     * Create new user
+     */
+    #[OA\Response(
+        response: Response::HTTP_CREATED,
+        description: 'Successful operation',
+        content: new OA\JsonContent(
+            ref: '#/components/schemas/UserRead'
+        )
+    )]
+    #[OA\Response(
+        response : 
+            Response::HTTP_BAD_REQUEST,
+            ref:'#/components/responses/BadRequestError',
+    )]
+    #[OA\Response(
+        response : 
+            Response::HTTP_UNAUTHORIZED,
+            ref:'#/components/responses/UnauthorizedError',
+    )]
     #[Route('/api/user', name: 'api_create_user', methods: ['POST'])]
     public function create(Request $request, SerializerInterface $serializer, EntityManagerInterface $manager, UserPasswordHasherInterface $passwordHasher): Response
     {
@@ -46,16 +112,41 @@ class UserController extends AbstractController
 
             $manager->flush();
 
-            return $this->json($newUser, Response::HTTP_CREATED,['Access-Control-Allow-Origin' => '*']);
+            return $this->json($newUser, Response::HTTP_CREATED);
 
         } catch (Exception $e) {
             return $this->json(
                 ['status' => Response::HTTP_BAD_REQUEST,
                  'message' => $e->getMessage()       
-            ],Response::HTTP_BAD_REQUEST, ['Access-Control-Allow-Origin' => '*']);
+            ],Response::HTTP_BAD_REQUEST);
         }
     }
 
+    /**
+     * Edit a user
+     */
+    #[OA\Response(
+        response: Response::HTTP_OK,
+        description: 'Successful operation',
+        content: new OA\JsonContent(
+            ref: '#/components/schemas/UserRead'
+        )
+    )]
+    #[OA\Response(
+        response : 
+            Response::HTTP_NOT_FOUND,
+            ref:'#/components/responses/NotFoundError',
+    )]
+    #[OA\Response(
+        response : 
+            Response::HTTP_BAD_REQUEST,
+            ref:'#/components/responses/BadRequestError',
+    )]
+    #[OA\Response(
+        response : 
+            Response::HTTP_UNAUTHORIZED,
+            ref:'#/components/responses/UnauthorizedError',
+    )]
     #[Route('/api/user/{id}', name: 'api_edit_user', methods: ['PUT'])]
     public function edit(UserRepository $userRepository,int $id, Request $request, SerializerInterface $serializer, EntityManagerInterface $manager, UserPasswordHasherInterface $passwordHasher): Response
     {
@@ -84,7 +175,7 @@ class UserController extends AbstractController
 
             $manager->flush();
 
-            return $this->json($user, Response::HTTP_ACCEPTED);
+            return $this->json($user, Response::HTTP_OK);
 
         } catch (Exception $e) {
             return $this->json(
@@ -94,10 +185,29 @@ class UserController extends AbstractController
         }
     }
 
+    /**
+     * Remove a user
+     */
+    #[OA\Response(
+        response: 
+            Response::HTTP_OK,
+            ref: '#/components/responses/RemoveSuccess'
+    )]
+    #[OA\Response(
+        response : 
+            Response::HTTP_NOT_FOUND,
+            ref:'#/components/responses/NotFoundError',
+    )]
+    #[OA\Response(
+        response : 
+            Response::HTTP_UNAUTHORIZED,
+            ref:'#/components/responses/UnauthorizedError',
+    )]
     #[Route('/api/user/{id}', name: 'api_delete_user', methods: ['DELETE'])]
     public function remove(UserRepository $userRepository,int $id, EntityManagerInterface $manager): Response
     {
         $user = $userRepository->find($id);
+
         if(!$user){
             return $this->json([
                 'status' => Response::HTTP_NOT_FOUND,
@@ -107,9 +217,10 @@ class UserController extends AbstractController
 
         $manager->remove($user);
         $manager->flush();
+
         return $this->json([
-            "status" => Response::HTTP_ACCEPTED,
+            "status" => Response::HTTP_OK,
             "message" => "success delete user"
-        ], Response::HTTP_ACCEPTED);
+        ], Response::HTTP_OK);
     }
 }
